# RainfallQC

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  ceh_pyproject.toml  environment.yml  justfile  original_intenseqc_environment.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-docs.yml  mirror.yml  publish-to-pypi.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  intro.rst  make.bat  modules.rst  quickstart.rst  rainfallqc.checks.rst  rainfallqc.qc_frameworks.rst  tutorials.rst  usage.rst
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  credits.rst  index.rst  installation.rst  intro.rst  quickstart.rst  rainfallqc.checks.rst  rainfallqc.core.rst  rainfallqc.qc_frameworks.rst  rainfallqc.rst  rainfallqc.utils.rst  tutorials.rst
docs/source/_static/css/: custom.css
docs/source/_templates/autosummary/: attribute.rst  method.rst  module.rst  property.rst
docs/source/_templates/partials/: nav-socials.html
docs/source/api/: rainfallqc.checks.rst  rainfallqc.core.rst  rainfallqc.qc_frameworks.rst  rainfallqc.utils.rst
docs/source/tutorials/: overview.rst  run_a_qc_framework.rst  run_a_sensitivity_analysis.rst  run_qc_checks.rst  running_multiple_qc_checks.rst  the_basics.rst  tutorials.rst  working_with_xarray.rst
src/intense_qc/: __init__.py
src/rainfall_qc/: __init__.py
src/rainfall_qc/checks/: comparison_checks.py  gauge_checks.py  neighbour_checks.py  timeseries_checks.py
src/rainfall_qc/core/: _check_data.py  format_data.py
src/rainfall_qc/rulebases/: intense_qc_rulebase.py
src/rainfall_qc/utils/: data_utils.py  spatial_utils.py
src/rainfallqc/: __init__.py  rainfallqc.py
src/rainfallqc/checks/: __init__.py  comparison_checks.py  gauge_checks.py  neighbourhood_checks.py  pypwsqc_filters.py  timeseries_checks.py
src/rainfallqc/core/: __init__.py  _check_data.py  _read_data.py  all_qc_checks.py  format_data.py
src/rainfallqc/data/: __init__.py
src/rainfallqc/data/ETCCDI/: __init__.py
src/rainfallqc/qc_frameworks/: __init__.py  apply_framework.py  apply_qc_framework.py  inbuilt_qc_frameworks.py
src/rainfallqc/rulebases/: intense_qc_rulebase.py
src/rainfallqc/utils/: __init__.py  data_loaders.py  data_readers.py  data_utils.py  neighbourhood_utils.py  spatial_utils.py  stats.py
tests/: __init__.py  conftest.py  test_intense_qc.py  test_rainfallqc.py
tests/data/GDSR/: DE_00310.txt  DE_00389.txt  DE_06264.txt  DE_06303.txt
tests/data/GSDR/: DE_00390.txt  DE_01300.txt  DE_02483.txt  DE_02718.txt  DE_03215.txt  DE_04313.txt  DE_04488.txt
tests/data/QC'd GDSR/: DE_02483_QCd.txt
tests/unit/: __init__.py  test_all_checks.py  test_apply_qc_frameworks.py  test_comparison_checks.py  test_data_readers.py  test_data_utils.py  test_gauge_checks.py  test_neighbourhood_checks.py  test_neighbourhood_utils.py  test_pypwsqc_filters.py  test_rainfallqc.py  test_spatial_utils.py  test_stats.py  test_timeseries_checks.py
