[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RainfallQC"
version = "0.0.1"
description = "Quality control procedure for rainfall data"
readme = "README.rst"
authors = [
  {name = "Tom Keel", email = "tomkee@ceh.ac.uk"}
]
maintainers = [
  {name = "Tom Keel", email = "tomkee@ceh.ac.uk"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [

]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "parameterized"]
docs = ["sphinx", "sphinx-copybutton", "sphinx-rtd-theme"]
lint = ["mypy", "ruff"]
dev = ["RainfallQC[test,docs,lint]"]

[project.urls]
bugs = "https://github.com/thomasjkeel/RainfallQC/issues"
changelog = "https://github.com/thomasjkeel/RainfallQC/blob/master/changelog.md"
homepage = "https://github.com/thomasjkeel/RainfallQC"


[tool.pytest.ini_options]
addopts = "--cov=RainfallQC"
markers = [
    "slow: Marks slow tests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.coverage.run]
omit = ["*__init__.py"]

[tool.ruff]
src = ["src", "tests"]
include = ["src/**.py"]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "A", "PLC", "PLE", "PLW", "I", "N816", "ANN001", "ANN201", "ANN202", "ANN205", "ANN206"]

[tool.ruff.lint.flake8-type-checking]
strict = true

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

