[build-system]
requires = ["setuptools>=71.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RainfallQC"
version = "0.0.2-beta"
description = "Quality control procedure for rainfall data"
readme = "README.rst"
authors = [
  {name = "Tom Keel", email = "tomkee@ceh.ac.uk"}
]
maintainers = [
  {name = "Tom Keel", email = "tomkee@ceh.ac.uk"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [

]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "parameterized"]
docs = ["sphinx", "sphinx-copybutton", "sphinx-rtd-theme"]
lint = ["mypy", "ruff"]
dev = ["RainfallQC[test,docs,lint]", "bump-my-version==0.32.0"]

[project.urls]
bugs = "https://github.com/thomasjkeel/RainfallQC/issues"
changelog = "https://github.com/thomasjkeel/RainfallQC/blob/master/changelog.md"
homepage = "https://github.com/thomasjkeel/RainfallQC"

[tool]

[tool.black]
target-version = [
  "py310",
  "py311",
  "py312",
  "py313"
]

[tool.bumpversion]
current_version = "0.0.2-beta"
commit = true
commit_args = "--no-verify --signoff"
tag = false
allow_dirty = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+))?"
serialize = [
  "{major}.{minor}.{patch}-{release}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "src/rainfall_qc/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""


[tool.bumpversion.parts.release]
optional_value = "gamma"
values = [
  "alpha",
  "beta",
  "gamma"
]

[tool.pytest.ini_options]
addopts = "--cov=RainfallQC"
markers = [
    "slow: Marks slow tests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.coverage.run]
omit = ["*__init__.py"]

[tool.ruff]
src = ["src", "tests"]
include = ["src/**.py"]
line-length = 120

[tool.ruff.lint]
ignore = [
  "D203", # incorrect-blank-line-before-class
  "D212" # multi-line-summary-first-line
]
preview = true
select = [
  "A",
  "B", # bugbear
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # imports
  "W", # pycodestyle warnings
  "PLC", "PLE", "PLW", "N816", "ANN001", "ANN201", "ANN202", "ANN205", "ANN206" # TODO
]
# exclude = [
#   "docs/notebooks/*.ipynb"
# ]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
case-sensitive = true

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
